--- a/lib/ferm.yml
+++ b/lib/ferm.yml
@@ -1,28 +1,35 @@
 ---
 - hosts: all
-  remote_user: maty
+  remote_user: root
   tasks:
   - pacman: name=ferm state=present
-    tags:
-       all
+    when: ansible_distribution == "Archlinux"
+  - yum: name=ferm state=present
+    when: ansible_distribution == "Ubuntu"
   - file: path=/etc/ferm state=directory owner=root group=root mode=0700
     tags:
-       all
+       always
   - file: path=/etc/ferm/ferm.d state=directory owner=root group=root mode=0700
     tags:
-       all
+       always
   - template: src=ferm.conf dest=/etc/ferm/ferm.conf owner=root group=root
     tags:
-       all
-  - template: src=ntp_iptables.conf dest=/etc/ferm/ferm.d/ntp.conf owner=root group=root
+       always
+  - template: src=./ferm_scripts/ssh_log_attack.py dest=/etc/ferm/ssh_log_attack.py owner=root group=root
     tags:
-      ntp
-  - template: src=ssh_iptables.conf dest=/etc/ferm/ferm.d/ssh.conf owner=root group=root
+      ssh_deny
+  - template: src=./ferm_rules/999_default_fw.conf dest=/etc/ferm/ferm.d/999_default_fw.conf owner=root group=root
     tags:
-       all
-  - command: /usr/sbin/ferm /etc/ferm/ferm.conf
+       always
+  - template: src=./ferm_rules/001_ssh_deny_ip.conf dest=/etc/ferm/ferm.d/001_ssh_deny_ip.conf owner=root group=root
     tags:
-       all
+       ssh_deny
+  - template: src=./ferm_rules/002_ftp_allow.conf dest=/etc/ferm/ferm.d/002_ftp_allow.conf owner=root group=root
+    tags:
+       ftp
+  - command: /usr/sbin/ferm --def '$ipv4_address={{ansible_default_ipv4.address}}' /etc/ferm/ferm.conf
+    tags:
+       always
   - file: path=/etc/ferm/ferm.d state=absent
     tags:
-       all
+       always
