--- a/lib/ferm.conf
+++ b/lib/ferm.conf
@@ -4,46 +4,30 @@ table filter {
     chain INPUT {
         policy DROP;
 
-        # connection tracking
-
-        #    state INVALID DROP;
-
-        # allow local connections
-        #interface lo ACCEPT;
-
-        #saddr
-        #saddr 10.115.73.136 jump ssh_fw;
-
-        # respond to ping
-        # proto icmp ACCEPT;
-
-        # allow SSH connections
-        #proto tcp dport ssh ACCEPT;
-
-
-
     }
 
-    # outgoing connections are not limited
+# outgoing connections are not limited
     chain OUTPUT {
         policy ACCEPT;
 
-        # connection tracking
+# connection tracking
         mod state {
             state INVALID DROP;
             state (RELATED ESTABLISHED) ACCEPT;
         }
     }
 
-    # this is not a router
+# this is not a router
     chain FORWARD {
         policy DROP;
 
-        # connection tracking
+# connection tracking
         mod state {
             state INVALID DROP;
             state (RELATED ESTABLISHED) ACCEPT;
         }
     }
 }
+
+#include all taged rules
 @include 'ferm.d/';
