--- a/lib/ferm_rules/999_default_fw.conf
+++ b/lib/ferm_rules/999_default_fw.conf
@@ -1,7 +1,33 @@
 table filter {
  chain fw {
-        daddr $ipv4_address proto tcp dport ssh ACCEPT;
-        daddr $ipv4_address proto tcp dport 1194 ACCEPT;
+        daddr $ipv4_address proto tcp {
+          dport ssh ACCEPT;
+        }  
+        daddr $ipv4_address proto icmp {
+          icmp-type echo-reply ACCEPT;
+          icmp-type destination-unreachable ACCEPT;
+          icmp-type source-quench ACCEPT;
+          icmp-type time-exceeded ACCEPT;
+          icmp-type parameter-problem ACCEPT;
+#          icmp-type echo-request mod limit limit 2/sec limit-burst 2 ACCEPT;
+        }
+		daddr $ipv4_address proto tcp {
+          tcp-flags ALL NONE DROP;
+          tcp-flags ALL ALL DROP;
+          tcp-flags ALL FIN DROP;
+          tcp-flags ALL (FIN URG PSH) DROP;
+          tcp-flags ALL (SYN FIN URG PSH) DROP;
+          tcp-flags ALL (SYN RST ACK FIN) DROP;
+          tcp-flags ALL (SYN RST ACK FIN URG) DROP;
+          tcp-flags (SYN RST) (SYN RST) DROP;
+          tcp-flags (SYN FIN) (SYN FIN) DROP;
+          tcp-flags (FIN RST) (FIN RST) DROP;
+          tcp-flags (ACK FIN) FIN DROP;
+          tcp-flags (ACK PSH) PSH DROP;
+          tcp-flags (ACK URG) URG DROP;
+        }
+        daddr $ipv4_address fragment DROP;
+
     }
  chain INPUT {
 		daddr $ipv4_address jump fw;
