--- a/lib/ferm_rules/ipv4/999_default_fw.conf
+++ b/lib/ferm_rules/ipv4/999_default_fw.conf
@@ -9,7 +9,7 @@ table filter {
           icmp-type source-quench ACCEPT;
           icmp-type time-exceeded ACCEPT;
           icmp-type parameter-problem ACCEPT;
-#          icmp-type echo-request mod limit limit 2/sec limit-burst 2 ACCEPT;
+          icmp-type echo-request mod limit limit 2/sec limit-burst 2 ACCEPT;
         }
 		daddr $ipv4_address proto tcp {
           tcp-flags ALL NONE DROP;
