amending ipv6 vars

--- a/lib/ferm_rules/ipv6/002_ftp_allow.conf
+++ b/lib/ferm_rules/ipv6/002_ftp_allow.conf
@@ -1,6 +1,6 @@
-table filter {
+domain ip6 table filter {
  chain fw {
-        daddr $ipv4_address proto tcp {
+        daddr $ipv6_address proto tcp {
         	dport 20 ACCEPT;
         	dport 21 ACCEPT;
         }
