--- a/lib/ferm_rules/ipv6/004_ntp_allow.conf
+++ b/lib/ferm_rules/ipv6/004_ntp_allow.conf
@@ -1,9 +1,8 @@
-table filter {
- chain ntp_fw {
-        proto tcp daddr {{ansible_local.public_ip.general.ip}} dport ntp ACCEPT;   
+domain ip6 table filter {
+ chain fw { 
+        daddr $ipv6_address proto tcp {
+        	dport ntp ACCEPT;
+        }  
     }
- chain INPUT {
- 		jump ntp_fw;
- }
 }
 
